# coverit-docgen

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.redis.yml  docker-compose.yml  docker.sh  main.py  pyproject.toml
.github/workflows/: docker.yml
overrides/: api.cloud.yml  api.dev.yml  api.test.yml  integrated.local.yml  standalone.local.yml
scripts/: run_local_worker.py
src/: main.py  middleware.py  worker.py
src/api/: router.py
src/core/: config.py  database.py  exceptions.py  http_client.py  logging.py  neo.py  playwright.py  ports.py  redis.py
src/models/: bdd.py  graph.py  guides.py  manual_bug.py  orm.py  queries.py  video.py
src/repositories/: bdd_repo.py  guide_repo.py  labeling_repo.py  video_repo.py
src/schemas/: crawler.py
src/services/assertions/: __init__.py  compiler.py  html_summarizer.py  scenario_context.py  selector.py
src/services/bdd/: collect_features.py  editor_steps.py  generate_mapping.py  gherkin.py  regression.py
src/services/guides/: formatter.py
src/services/labeling/: actions.py  constants.py  labeling.py  labeling_service.py  naming.py  page_analyzer.py  rule_based.py
src/services/reporting/: report_client.py
src/tasks/: bdd.py  guides.py  labeling.py  manual_bug.py  poller.py  reporter.py  video.py
src/utils/: helpers.py  html_tools.py
tests/: test_bdd.py  test_context_labeling.py  test_guides.py  test_jira_provider.py  test_logging.py  test_manual_bug.py  test_page_analyzer.py  test_pipeline.py  test_semantic_assertions.py  test_video.py
(+17 files in other folders)
