[project]
name = "coverit-docgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.3",
    "neo4j>=6.2.0",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "redis>=5.3.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "watchfiles>=1.2.0",
]
