[project]
name = "coverit-docgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arq>=0.28.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.3",
    "imageio-ffmpeg>=0.6.0",
    "neo4j>=6.2.0",
    "playwright>=1.60.0",
    "coverit-contracts",
    "pillow>=11.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "redis>=5.3.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "watchfiles>=1.2.0",
]


[tool.uv]
extra-index-url = ["https://coveritlabs.github.io/coverit-contracts/simple/"]
